Closed Bug 98686 Opened 23 years ago Closed 23 years ago

Table celldata code isn't cool enough for 64bit platforms.

Categories

(Core :: Layout, defect)

Sun
Solaris
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: pavlov, Assigned: pavlov)

Details

Attachments

(1 file)

The bit twiddling code in celldata.h sucks extended word rocks.
The union of mOrigCell and mBits doesn't line up on 64bit platforms.
The problem is that the padding isn't right since you are using a pointer and a 
32bit int.. blah blah blah..

you end up with:

[      64bit pointer     ]
[ 32bit int ][ 32bit pad ]

so when you assign the pointer value, you end up filling up the padding before 
you touch the int.. then you ask for the int, and it laughs at you.


don't forget, %sp + 0x7ff
Comment on attachment 48559 [details] [diff] [review]
make celldata code a whee bit cooler

sr=jst
Attachment #48559 - Flags: superreview+
Attachment #48559 - Flags: review+
fix checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: