fix for table 64bit lameness.  bug 98686.  r=gisburnd sr=jst